# DistributedLoggingSystem

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  test_scripts.md
src/: FileRotator.cpp  FileRotator.h  LogMessage.cpp  LogMessage.h  LogServer.cpp  LogServer.h  LogStorage.cpp  LogStorage.h  LoggerClient.cpp  LoggerClient.h  TcpConnection.cpp  TcpConnection.h  main.cpp
tests/: test_FileRotator.cpp  test_LogMessage.cpp  test_LogServer.cpp  test_LogStorage.cpp  test_LoggerClient.cpp  test_TcpConnection.cpp  test_common.h
tests/scenarios/: scenario_basic.cpp  scenario_filtering.cpp  scenario_json.cpp  scenario_load_test.cpp  scenario_multi_client.cpp  scenario_performance.cpp  scenario_rotation.cpp  scenario_shutdown.cpp  scenario_stacktrace.cpp
